src/main/java/com/example/DiplomaSite/error/TeacherDeletionException.java
package com.example.DiplomaSite.error;

public class TeacherDeletionException extends RuntimeException{
    public TeacherDeletionException(String message, Throwable cause) {
        super(message, cause);
    }
}
